--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <title>蟹宝宝</title>
+    <title>周老师</title>
     <script src="js/sakura.js"></script>
     <style>
         * {
@@ -56,73 +57,73 @@
         }
 
         .minbox li:nth-child(1) {
-            background: url(img/01.png) no-repeat 0 0;
+            background: url(img/4.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: translateZ(50px);
         }
 
         .minbox li:nth-child(2) {
-            background: url(img/02.png) no-repeat 0 0;
+            background: url(img/2.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateX(180deg) translateZ(50px);
         }
 
         .minbox li:nth-child(3) {
-            background: url(img/03.png) no-repeat 0 0;
+            background: url(img/1.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateX(-90deg) translateZ(50px);
         }
 
         .minbox li:nth-child(4) {
-            background: url(img/04.png) no-repeat 0 0;
+            background: url(img/3.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateX(90deg) translateZ(50px);
         }
 
         .minbox li:nth-child(5) {
-            background: url(img/05.png) no-repeat 0 0;
+            background: url(img/3.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateY(-90deg) translateZ(50px);
         }
 
         .minbox li:nth-child(6) {
-            background: url(img/06.png) no-repeat 0 0;
+            background: url(img/4.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateY(90deg) translateZ(50px);
         }
 
         .maxbox li:nth-child(1) {
-            background: url(img/1.png) no-repeat 0 0;
+            background: url(img/3.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: translateZ(50px);
         }
 
         .maxbox li:nth-child(2) {
-            background: url(img/2.png) no-repeat 0 0;
+            background: url(img/2.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: translateZ(50px);
         }
 
         .maxbox li:nth-child(3) {
-            background: url(img/3.png) no-repeat 0 0;
+            background: url(img/3.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateX(-90deg) translateZ(50px);
         }
 
         .maxbox li:nth-child(4) {
-            background: url(img/4.png) no-repeat 0 0;
+            background: url(img/4.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateX(90deg) translateZ(50px);
         }
 
         .maxbox li:nth-child(5) {
-            background: url(img/5.png) no-repeat 0 0;
+            background: url(img/4.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateY(-90deg) translateZ(50px);
         }
 
         .maxbox li:nth-child(6) {
-            background: url(img/6.png) no-repeat 0 0;
+            background: url(img/1.jpg) no-repeat 0 0;
             background-size: contain;
             -webkit-transform: rotateY(90deg) translateZ(50px);
         }
@@ -226,6 +227,21 @@
             left: -100px;
             top: -100px;
         }
+        .tishi {
+	        position: absolute;
+	        position: fixed !important;
+	        z-index: 99;
+	        bottom: 10px;
+	        width: 100%;
+	        text-align: center;
+        }
+        .tishiContent {
+	        border: 1px solid #FFF;
+	        font-size: 18px;
+	        padding: 5px;
+	        cursor: pointer;
+	        border-radius: 5px;
+        }
 
         @keyframes move {
             0% {
@@ -239,6 +255,7 @@
 </head>
 <body>
 <div id="jsi-cherry-container" class="container">
+    <audio src="一定要幸福.mp3" autoplay="autoplay"></audio>
     <div class="box">
         <ul class="minbox">
             <li></li>
@@ -258,7 +275,14 @@
         </ol>
     </div>
 </div>
+
+<div align="center" class="tishi">
+    <a href="./1/teacher.html" target="_self">轻轻的点哦</a><br /> 
+</div>
+
 </body>
+
+<script type="text/javascript" src="./jscss/jquery.min.js"></script>
 
 <script>
     let box = document.querySelectorAll('.box')[0];
@@ -269,5 +293,10 @@
         box.style.top = '44%';
         box.style.left = '44%';
     }
+
+
+    
 </script>
+
+
 </html>
